tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop-fail.stock.stderr
error[E0277]: can't drop `NonTrivialDrop`
  --> $DIR/const-drop-fail.rs:33:5
   |
LL |         const _: () = check($exp);
   |                       ----- required by a bound introduced by this call
...
LL |     NonTrivialDrop,
   |     ^^^^^^^^^^^^^^ the trait `Destruct` is not implemented for `NonTrivialDrop`
   |
   = note: the trait bound `NonTrivialDrop: Destruct` is not satisfied
note: required by a bound in `check`
  --> $DIR/const-drop-fail.rs:24:19
   |
LL | const fn check<T: ~const Destruct>(_: T) {}
   |                   ^^^^^^^^^^^^^^^ required by this bound in `check`
help: consider borrowing here
   |
LL |     &NonTrivialDrop,
   |     +
LL |     &mut NonTrivialDrop,
   |     ++++

error[E0277]: can't drop `ConstImplWithDropGlue`
  --> $DIR/const-drop-fail.rs:34:5
   |
LL |         const _: () = check($exp);
   |                       ----- required by a bound introduced by this call
...
LL |     ConstImplWithDropGlue(NonTrivialDrop),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Destruct` is not implemented for `ConstImplWithDropGlue`
   |
   = note: the trait bound `ConstImplWithDropGlue: Destruct` is not satisfied
note: required by a bound in `check`
  --> $DIR/const-drop-fail.rs:24:19
   |
LL | const fn check<T: ~const Destruct>(_: T) {}
   |                   ^^^^^^^^^^^^^^^ required by this bound in `check`
help: consider borrowing here
   |
LL |     &ConstImplWithDropGlue(NonTrivialDrop),
   |     +
LL |     &mut ConstImplWithDropGlue(NonTrivialDrop),
   |     ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
